--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-
     <header class="header">
       <div class="container header-container">
         <nav class="navigation">
@@ -65,8 +64,8 @@
         <button class="hero-btn" type="button">Замовити послугу</button>
       </section>
 
-      <section class="prop">
-        <div class="container prop-container">
+      <section class="about">
+        <div class="container section-container">
           <h2 hidden>Особливості</h2>
           <ul class="prop-list list">
             <li class="prop-list-item">
@@ -97,11 +96,7 @@
               </p>
             </li>
           </ul>
-        </div>
-      </section>
 
-      <section class="about">
-        <div class="container section-container about-container">
           <h2 class="second-title">Чим ми займаємося</h2>
           <ul class="about-list list">
             <li class="about-list-item">
@@ -122,7 +117,7 @@
       </section>
 
       <section class="team">
-        <div class="container section-container team-container">
+        <div class="container section-container">
           <h2 class="second-title">Наша команда</h2>
           <ul class="team-list list">
             <li class="team-list-item">
@@ -194,6 +189,5 @@
         </address>
       </div>
     </footer>
-    
   </body>
 </html>
