--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <main>
       <section class="hero">
-        <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="main-title">Ефективні рішення для <br /> вашого бізнесу</h1>
         <button class="hero-btn" type="button">Замовити послугу</button>
       </section>
 
