--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="navigation">
-          <a class="logo link" href="./index.html"><span>Web</span>Studio</a>
+          <a class="logo-header logo link" href="./index.html"><span>Web</span>Studio</a>
           <ul class="nav-list list">
             <li class="nav-list-item">
               <a class="nav-list-link link active-page" href="./index.html"
@@ -60,12 +60,14 @@
 
     <main>
       <section class="hero">
-        <h1 class="main-title">Ефективні рішення для <br /> вашого бізнесу</h1>
-        <button class="hero-btn" type="button">Замовити послугу</button>
+        <div class="container">
+          <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero-btn" type="button">Замовити послугу</button>
+        </div>
       </section>
 
-      <section class="about">
-        <div class="container section-container">
+      <section class="section prop">
+        <div class="container">
           <h2 hidden>Особливості</h2>
           <ul class="prop-list list">
             <li class="prop-list-item">
@@ -96,7 +98,11 @@
               </p>
             </li>
           </ul>
+        </div>
+      </section>
 
+      <section class="section about">
+        <div class="container section-container">
           <h2 class="second-title">Чим ми займаємося</h2>
           <ul class="about-list list">
             <li class="about-list-item">
@@ -116,12 +122,11 @@
         </div>
       </section>
 
-      <section class="team">
+      <section class="section team">
         <div class="container section-container">
           <h2 class="second-title">Наша команда</h2>
           <ul class="team-list list">
             <li class="team-list-item">
-              <div class="team-card">
                 <img
                   src="./images/team1.jpg"
                   alt="Ігор Дем'яненко"
@@ -131,19 +136,15 @@
                   <h3 class="team-title title">Ігор Дем'яненко</h3>
                   <p class="team-descriptionprop-">Product Designer</p>
                 </div>
-              </div>
             </li>
             <li class="team-list-item">
-              <div class="team-card">
-                <img src="./images/team2.jpg" alt="Ольга Рєпіна" width="270" />
+                             <img src="./images/team2.jpg" alt="Ольга Рєпіна" width="270" />
                 <div class="team-content-wrapper">
                   <h3 class="team-title title">Ольга Рєпіна</h3>
                   <p class="team-descriptionprop-">Frontend Developer</p>
                 </div>
-              </div>
             </li>
             <li class="team-list-item">
-              <div class="team-card">
                 <img
                   src="./images/team3.jpg"
                   alt="Микола Тарасов"
@@ -153,10 +154,8 @@
                   <h3 class="team-title title">Микола Тарасов</h3>
                   <p class="team-descriptionprop-">Marketing</p>
                 </div>
-              </div>
             </li>
             <li class="team-list-item">
-              <div class="team-card">
                 <img
                   src="./images/team4.jpg"
                   alt="Михайло Єрмаков"
@@ -166,7 +165,6 @@
                   <h3 class="team-title title">Михайло Єрмаков</h3>
                   <p class="team-descriptionprop-">UI Designer</p>
                 </div>
-              </div>
             </li>
           </ul>
         </div>
