--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="navigation">
-          <a class="logo link" href="./index.html"><span>Web</span>Studio</a>
+          <a class="logo-header logo link" href="./index.html"><span>Web</span>Studio</a>
           <ul class="nav-list list">
             <li class="nav-list-item">
               <a class="nav-list-link link" href="./index.html">Студія</a>
@@ -57,142 +57,145 @@
     </header>
 
     <main class="portfolio">
-      <div class="container section-container">
-        <h1 hidden>Портфоліо</h1>
-        <h2 hidden>Портфоліо за типами</h2>
+      <section class="section">
+        <div class="container">
+          <h1 hidden>Портфоліо</h1>
+          <h2 hidden>Портфоліо за типами</h2>
+  
+          <ul class="filters-list list">
+            <li class="filters-list-item">
+              <button class="filter-btn" type="button">Усі</button>
+            </li>
+            <li class="filters-list-item">
+              <button class="filter-btn" type="button">Веб-сайти</button>
+            </li>
+            <li class="filters-list-item">
+              <button class="filter-btn" type="button">Додатки</button>
+            </li>
+            <li class="filters-list-item">
+              <button class="filter-btn" type="button">Дизайн</button>
+            </li>
+            <li class="filters-list-item">
+              <button class="filter-btn" type="button">Маркетинг</button>
+            </li>
+          </ul>
+  
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="">
+                <img src="./images/portfolio1.jpg" alt="Технокряк" width="370" />
+                <div class="portfolio-content-wrapper">
+                  <h3 class="portfolio-title">Технокряк</h3>
+                  <p class="portfolio-type">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="">
+                <img
+                  src="./images/portfolio2.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                  width="370"
+                />
+                <div class="portfolio-content-wrapper">
+                  <h3 class="portfolio-title">
+                    Постер New Orlean vs Golden Star
+                  </h3>
+                  <p class="portfolio-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="">
+                <img
+                  src="./images/portfolio3.jpg"
+                  alt="Ресторан Seafood"
+                  width="370"
+                />
+                <div class="portfolio-content-wrapper">
+                  <h3 class="portfolio-title">Ресторан Seafood</h3>
+                  <p class="portfolio-type">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="">
+                <img
+                  src="./images/portfolio4.jpg"
+                  alt="Проєкт Prime"
+                  width="370"
+                />
+                <div class="portfolio-content-wrapper">
+                  <h3 class="portfolio-title">Проєкт Prime</h3>
+                  <p class="portfolio-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="">
+                <img
+                  src="./images/portfolio5.jpg"
+                  alt="Проєкт Boxes"
+                  width="370"
+                />
+                <div class="portfolio-content-wrapper">
+                  <h3 class="portfolio-title">Проєкт Boxes</h3>
+                  <p class="portfolio-type">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="">
+                <img
+                  src="./images/portfolio6.jpg"
+                  alt="Inspiration has no Borders"
+                  width="370"
+                />
+                <div class="portfolio-content-wrapper">
+                  <h3 class="portfolio-title">Inspiration has no Borders</h3>
+                  <p class="portfolio-type">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="">
+                <img
+                  src="./images/portfolio7.jpg"
+                  alt="Видання Limited Edition"
+                  width="370"
+                />
+                <div class="portfolio-content-wrapper">
+                  <h3 class="portfolio-title">Видання Limited Edition</h3>
+                  <p class="portfolio-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="">
+                <img src="./images/portfolio8.jpg" alt="Проєкт LAB" width="370" />
+                <div class="portfolio-content-wrapper">
+                  <h3 class="portfolio-title">Проєкт LAB</h3>
+                  <p class="portfolio-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="">
+                <img
+                  src="./images/portfolio9.jpg"
+                  alt="Growing Business"
+                  width="370"
+                />
+                <div class="portfolio-content-wrapper">
+                  <h3 class="portfolio-title">Growing Business</h3>
+                  <p class="portfolio-type">Додаток</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-        <ul class="filters-list list">
-          <li class="filters-list-item">
-            <button class="filter-btn" type="button">Усі</button>
-          </li>
-          <li class="filters-list-item">
-            <button class="filter-btn" type="button">Веб-сайти</button>
-          </li>
-          <li class="filters-list-item">
-            <button class="filter-btn" type="button">Додатки</button>
-          </li>
-          <li class="filters-list-item">
-            <button class="filter-btn" type="button">Дизайн</button>
-          </li>
-          <li class="filters-list-item">
-            <button class="filter-btn" type="button">Маркетинг</button>
-          </li>
-        </ul>
-
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href="">
-              <img src="./images/portfolio1.jpg" alt="Технокряк" width="370" />
-              <div class="portfolio-content-wrapper">
-                <h3 class="portfolio-title">Технокряк</h3>
-                <p class="portfolio-type">Веб-сайт</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href="">
-              <img
-                src="./images/portfolio2.jpg"
-                alt="Постер New Orlean vs Golden Star"
-                width="370"
-              />
-              <div class="portfolio-content-wrapper">
-                <h3 class="portfolio-title">
-                  Постер New Orlean vs Golden Star
-                </h3>
-                <p class="portfolio-type">Дизайн</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href="">
-              <img
-                src="./images/portfolio3.jpg"
-                alt="Ресторан Seafood"
-                width="370"
-              />
-              <div class="portfolio-content-wrapper">
-                <h3 class="portfolio-title">Ресторан Seafood</h3>
-                <p class="portfolio-type">Додаток</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href="">
-              <img
-                src="./images/portfolio4.jpg"
-                alt="Проєкт Prime"
-                width="370"
-              />
-              <div class="portfolio-content-wrapper">
-                <h3 class="portfolio-title">Проєкт Prime</h3>
-                <p class="portfolio-type">Маркетинг</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href="">
-              <img
-                src="./images/portfolio5.jpg"
-                alt="Проєкт Boxes"
-                width="370"
-              />
-              <div class="portfolio-content-wrapper">
-                <h3 class="portfolio-title">Проєкт Boxes</h3>
-                <p class="portfolio-type">Додаток</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href="">
-              <img
-                src="./images/portfolio6.jpg"
-                alt="Inspiration has no Borders"
-                width="370"
-              />
-              <div class="portfolio-content-wrapper">
-                <h3 class="portfolio-title">Inspiration has no Borders</h3>
-                <p class="portfolio-type">Веб-сайт</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href="">
-              <img
-                src="./images/portfolio7.jpg"
-                alt="Видання Limited Edition"
-                width="370"
-              />
-              <div class="portfolio-content-wrapper">
-                <h3 class="portfolio-title">Видання Limited Edition</h3>
-                <p class="portfolio-type">Дизайн</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href="">
-              <img src="./images/portfolio8.jpg" alt="Проєкт LAB" width="370" />
-              <div class="portfolio-content-wrapper">
-                <h3 class="portfolio-title">Проєкт LAB</h3>
-                <p class="portfolio-type">Маркетинг</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href="">
-              <img
-                src="./images/portfolio9.jpg"
-                alt="Growing Business"
-                width="370"
-              />
-              <div class="portfolio-content-wrapper">
-                <h3 class="portfolio-title">Growing Business</h3>
-                <p class="portfolio-type">Додаток</p>
-              </div>
-            </a>
-          </li>
-        </ul>
-      </div>
     </main>
 
     <footer class="footer">
